# multimodal_mujoco_adversary

./: .gitignore  README.md  attack_detector.py  check_gpu.py  cnn_attack_detector.py  defence_vae.pth  defense_vae  defense_vae.py  diffusion.py  environment.yml  pyproject.toml  train_ddpm.py
Experiments/diffusion_defense_1/: noisy_diffusion_defense_1_epoch0.npy  noisy_diffusion_defense_1_epoch1.npy  noisy_diffusion_defense_1_epoch10.npy  noisy_diffusion_defense_1_epoch11.npy  noisy_diffusion_defense_1_epoch12.npy  noisy_diffusion_defense_1_epoch13.npy  noisy_diffusion_defense_1_epoch14.npy  noisy_diffusion_defense_1_epoch15.npy  noisy_diffusion_defense_1_epoch16.npy  noisy_diffusion_defense_1_epoch17.npy  noisy_diffusion_defense_1_epoch18.npy  noisy_diffusion_defense_1_epoch19.npy  noisy_diffusion_defense_1_epoch2.npy  noisy_diffusion_defense_1_epoch20.npy  noisy_diffusion_defense_1_epoch21.npy  (+121 more)
ddiffpg/: __init__.py
ddpm/: coco_dataset.py  diffusion.py  experiment.py  test_unet_mlp_1d.py  unet_1d.py  unet_1d_V2.py  unet_mlp_1d.py
mujoco_ant_obs_dataset/: Adversarial Detection Results.xlsx
scripts/: ADVERSARIAL_CONFIGS.py  baselines_main.py  collect_adversarial_dataset.py  ddiffpg_main.py  diffusion.py  evaluate_ddpm_defense.py  run_baselines_grid.sh  run_collect_fgsm_dataset.sh  validate_attack_modes.py
signal_processing/: README.md  dbscan.py  generate_feature_perm_plots.py  generate_shap_plots.py  gmm_clustering.py  join_datasets.py  kmeans_attack_detector.py  knn_attack_detector.py  min_max_normalize_data.py  run_all_models.py  spectral_clustering.py  svm.py
(+441 files in other folders)
